--- a/pages/resources.html
+++ b/pages/resources.html
@@ -81,7 +81,11 @@
     .badge-red { background: #fee2e2; color: #991b1b; }
     .resource-type { display: inline-block; padding: 2px 10px; background: #e5e7eb; border-radius: 10px; font-size: 0.75rem; color: #555; margin-bottom: 0.5rem; }
     .resource-desc { color: #555; font-size: 0.88rem; line-height: 1.5; margin-bottom: 0.6rem; }
-    .resource-meta { font-size: 0.82rem; color: #888; padding-top: 0.6rem; border-top: 1px solid var(--border-color); }
+    .resource-instructions { font-size: 0.84rem; color: #666; margin-bottom: 0.6rem; padding: 0.5rem 0.7rem; background: #f0f0f0; border-radius: 8px; }
+    .resource-footer { display: flex; justify-content: space-between; align-items: center; font-size: 0.82rem; color: #888; padding-top: 0.6rem; border-top: 1px solid var(--border-color); }
+    .resource-owner { color: #666; }
+    .resource-link { padding: 4px 12px; background: var(--accent-color); color: white; text-decoration: none; border-radius: 8px; font-size: 0.8rem; transition: opacity 0.2s; }
+    .resource-link:hover { opacity: 0.85; }
 
     /* ── 使用规则：横排图标卡片 ── */
     .rules-grid {
@@ -436,17 +440,23 @@
       const c = document.getElementById('resource-list');
       let f = resources;
       if (!f.length) { c.innerHTML = '<div class="empty-state">暂无资源</div>'; return; }
-      c.innerHTML = f.map(r => `
+      c.innerHTML = f.map(r => {
+        const hasLink = r.link && r.link !== '-' && r.link.trim() && !r.link.startsWith('通过');
+        return `
         <div class="resource-card">
           <div class="resource-top">
             <div class="resource-name">${getIcon(r.type)} ${r.name}</div>
-            <span class="badge ${badgeClass(r.status)}">${r.status}</span>
+            <span class="badge ${badgeClass(r.status)}">${normalizeStatus(r.status)}</span>
           </div>
           <div class="resource-type">${r.type || '其他'}</div>
           <div class="resource-desc">${r.description || ''}</div>
-          <div class="resource-meta">👤 ${r.owner || '未指定'}${r.instructions ? ' · 📝 ' + r.instructions : ''}</div>
+          ${r.instructions && r.instructions !== '-' ? `<div class="resource-instructions">📝 ${r.instructions}</div>` : ''}
+          <div class="resource-footer">
+            <span class="resource-owner">👤 ${r.owner || '未指定'}</span>
+            ${hasLink ? `<a class="resource-link" href="${r.link}" target="_blank">🔗 访问</a>` : ''}
+          </div>
         </div>
-      `).join('');
+      `}).join('');
     }
 
     window.loadAll = loadAll;
